--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,10 @@ def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
 }
 
+def isNewArchitectureEnabled() {
+    return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
+}
+
 buildscript {
     // The Android Gradle plugin is only required when opening the android folder stand-alone.
     // This avoids unnecessary downloads and potential conflicts when the library is included as a
@@ -19,15 +23,29 @@ buildscript {
 
 apply plugin: "com.android.library"
 
+if (isNewArchitectureEnabled()) {
+    apply plugin: 'com.facebook.react'
+}
+
 android {
     compileSdkVersion safeExtGet("compileSdkVersion", 31)
     buildToolsVersion safeExtGet("buildToolsVersion", "31.0.0")
     defaultConfig {
         minSdkVersion safeExtGet("minSdkVersion", 21)
         targetSdkVersion safeExtGet("targetSdkVersion", 31)
+        buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
     }
     lintOptions {
         abortOnError false
+    }
+    sourceSets {
+        main {
+            if (isNewArchitectureEnabled()) {
+                java.srcDirs += ['src/newarch']
+            } else {
+                java.srcDirs += ['src/oldarch']
+            }
+        }
     }
 }
 
@@ -49,4 +67,12 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+" // From node_modules
+}
+
+if (isNewArchitectureEnabled()) {
+     react {
+         jsRootDir = file("../codegen/")
+         libraryName = "rnlocalize"
+         codegenJavaPackageName = "com.zoontek.rnlocalize"
+     }
 }
